# RAG-incorporated-Agentic-Chatbot

./: .gitignore  AGENTS.md  Parse.py  README.md  TROUBLESHOOTING_FIX.md  app.py  file_metadata.db  main.py  pyproject.toml  requirements.txt  streamlit_app.py  wishes.txt
chroma_db/: chroma.sqlite3
data/: academics.txt  daily_life.txt  experience.txt  personal_data.txt  sample.csv
src/: config.py
src/database/: metadata_store.py  vector_store.py
src/graph/: schemas.py  state.py  workflow.py
src/graph/nodes/: gemini_fallback.py  generate.py  generate_online.py  grade.py  hallucination.py  retrieve.py  sufficiency.py
src/ingestion/: csv_loader.py  directory_scanner.py  text_processor.py
tests/: conftest.py  test_csv_loader.py  test_directory_scanner.py  test_metadata_store.py  test_nodes.py  test_text_processor.py  test_workflow.py
