[project]
name = "rag-agentic-chatbot"
version = "0.1.0"
description = "A hallucination-proof RAG chatbot using LangGraph"
authors = [{ name = "Antigravity" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.10",
    "langchain-google-genai>=0.0.5",
    "langchain-community>=0.0.10",
    "langchain-ollama>=0.1.0",
    "chromadb>=0.5.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "PyPDF2>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
